[tool.poetry]
name = "advent-of-code-2024"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Chi <cychoi@zoho.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
